tests/ui/closures/binder/bounds-on-closure-type-binders.stderr
error: late-bound type parameter not allowed on closures
  --> $DIR/bounds-on-closure-type-binders.rs:11:17
   |
LL |     let _ = for<T: Trait> || -> () {};
   |                 ^

error: aborting due to 1 previous error

